force-app/main/default/objects/Quote/fields/Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Aprovador__c</fullName>
    <label>Aprovador</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>