force-app/main/default/objects/Quote/fields/Catalogo_de_precos__c.field-meta.xml
<CustomField>
    <fullName>Catalogo_de_precos__c</fullName>
    <formula>Opportunity.Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catálogo de preços</label>
    <type>Text</type>
</CustomField>