force-app/main/default/objects/Quote/fields/Clausula1__c.field-meta.xml
<CustomField>
    <fullName>Clausula1__c</fullName>
    <label>Cláusula1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>