force-app/main/default/objects/Quote/fields/Clausula_10_Editada__c.field-meta.xml
<CustomField>
    <fullName>Clausula_10_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clausula 10 Editada</label>
    <type>Checkbox</type>
</CustomField>