force-app/main/default/objects/Quote/fields/Clausula_11__c.field-meta.xml
<CustomField>
    <fullName>Clausula_11__c</fullName>
    <label>Cláusula 11</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>