force-app/main/default/objects/Quote/fields/Clausula_12__c.field-meta.xml
<CustomField>
    <fullName>Clausula_12__c</fullName>
    <label>Cláusula 12</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>