force-app/main/default/objects/Quote/fields/Clausula_14_Editada__c.field-meta.xml
<CustomField>
    <fullName>Clausula_14_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clausula 14 Editada</label>
    <type>Checkbox</type>
</CustomField>