force-app/main/default/objects/Quote/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>IF(Opportunity.Account.CNPJ__c != null, Opportunity.Account.Name, Opportunity.Account.FirstName + &apos; &apos; + Opportunity.Account.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>