force-app/main/default/objects/Quote/fields/Data_das_demais_parcelas__c.field-meta.xml
<CustomField>
    <fullName>Data_das_demais_parcelas__c</fullName>
    <inlineHelpText>Data base para seguir as próximas parcelas. Ex: 22/11/2022, automaticamente o vencimento da subsequente será 22/12/2022 e assim sucessivamente.</inlineHelpText>
    <label>Data das demais parcelas</label>
    <type>Date</type>
</CustomField>