force-app/main/default/objects/Quote/fields/E_mail_da_Testemunha__c.field-meta.xml
<CustomField>
    <fullName>E_mail_da_Testemunha__c</fullName>
    <label>E-mail da Testemunha</label>
    <type>Email</type>
</CustomField>