force-app/main/default/objects/Quote/fields/E_mail_do_Contato__c.field-meta.xml
<CustomField>
    <fullName>E_mail_do_Contato__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-mail do Contato</label>
    <type>Text</type>
</CustomField>