force-app/main/default/objects/Quote/fields/Fiador__c.field-meta.xml
<CustomField>
    <fullName>Fiador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cotações</relationshipLabel>
    <relationshipName>Cota_es</relationshipName>
    <type>Lookup</type>
</CustomField>