force-app/main/default/objects/Quote/fields/Forma_de_pagamento_da_entrada__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pagamento_da_entrada__c</fullName>
    <label>Forma de pagamento da entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pix</fullName>
            </value>
            <value>
                <fullName>Transferência Bancária</fullName>
            </value>
            <value>
                <fullName>Cartão Débito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>