force-app/main/default/objects/Quote/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cota_es2</relationshipName>
    <type>Lookup</type>
</CustomField>