force-app/main/default/objects/Quote/fields/Gerente_de_Linha__c.field-meta.xml
<CustomField>
    <fullName>Gerente_de_Linha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente de Linha</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cota_es1</relationshipName>
    <type>Lookup</type>
</CustomField>