force-app/main/default/objects/Quote/fields/Gerente_Regional__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Regional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente Regional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cota_es</relationshipName>
    <type>Lookup</type>
</CustomField>