force-app/main/default/objects/Quote/fields/idDocAutentique__c.field-meta.xml
<CustomField>
    <fullName>idDocAutentique__c</fullName>
    <label>idDocAutentique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>