force-app/main/default/objects/Quote/fields/Juros_Base__c.field-meta.xml
<CustomField>
    <fullName>Juros_Base__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo usado para calcular juros com base em parcela.</description>
    <label>Juros Base</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Regra_de_aprovacao_de_cotacao__c.Id</field>
            <operation>equals</operation>
            <value>a3mU4000000ULobIAG</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Regra_de_aprovacao_de_cotacao__c</referenceTo>
    <relationshipLabel>Cotações</relationshipLabel>
    <relationshipName>Cotacoes</relationshipName>
    <type>Lookup</type>
</CustomField>