force-app/main/default/objects/Quote/fields/Link_Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Link_Cotacao__c</fullName>
    <label>Link Cotação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>