force-app/main/default/objects/Quote/fields/Numero_de_prestacoes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_prestacoes__c</fullName>
    <label>Nº de parcelas (Financiamento)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>