force-app/main/default/objects/Quote/fields/Observa_o_da_Condi_o__c.field-meta.xml
<CustomField>
    <fullName>Observa_o_da_Condi_o__c</fullName>
    <label>Observação da Condição</label>
    <type>TextArea</type>
</CustomField>