force-app/main/default/objects/Quote/fields/Prazo_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_Entrega__c</fullName>
    <label>Prazo de entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>