force-app/main/default/objects/Quote/fields/Prazo_de_garantia__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_garantia__c</fullName>
    <defaultValue>&quot;Equipamentos &quot; + TEXT(12) + &quot; meses, acessórios &quot; + TEXT(3) + &quot; meses&quot;</defaultValue>
    <inlineHelpText>Ex: Equipamentos 12 meses, acessórios 3 meses, etc...</inlineHelpText>
    <label>Prazo de garantia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>