force-app/main/default/objects/Quote/fields/Prazo_de_garantia_acessorios__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_garantia_acessorios__c</fullName>
    <defaultValue>TEXT(3) + &apos; meses&apos;</defaultValue>
    <inlineHelpText>Ex: 3 meses</inlineHelpText>
    <label>Prazo de garantia dos acessórios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>