force-app/main/default/objects/Quote/fields/Prazo_de_garantia_dos_equipamentos__c.field-meta.xml
<CustomField>
    <fullName>Prazo_de_garantia_dos_equipamentos__c</fullName>
    <defaultValue>TEXT(12) + &apos; meses&apos;</defaultValue>
    <inlineHelpText>Ex: 12 meses</inlineHelpText>
    <label>Prazo de garantia dos equipamentos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>