force-app/main/default/objects/Quote/fields/Proposta_detalhada__c.field-meta.xml
<CustomField>
    <fullName>Proposta_detalhada__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A marcação deste campo faz com que a proposta saia com detalhamento de valores para cada acessório.</inlineHelpText>
    <label>Proposta detalhada</label>
    <type>Checkbox</type>
</CustomField>