force-app/main/default/objects/Quote/fields/Responsabilidade_pelos_Encargos__c.field-meta.xml
<CustomField>
    <fullName>Responsabilidade_pelos_Encargos__c</fullName>
    <description>Selecione quem será responsável pelos encargos financeiros.
Esta informação define se haverá cessão de crédito pela Hospcom ou se os juros serão assumidos pelo cliente.</description>
    <label>Responsabilidade pelos Encargos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cessão de Crédito – Hospcom</fullName>
            </value>
            <value>
                <fullName>Juros por Conta do Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>