force-app/main/default/objects/Quote/fields/Saldo_para_parcelamento__c.field-meta.xml
<CustomField>
    <fullName>Saldo_para_parcelamento__c</fullName>
    <formula>Opportunity.Account.SaldoDeCredito__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo para parcelamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>