force-app/main/default/objects/Quote/fields/Saldo_parcelado__c.field-meta.xml
<CustomField>
    <fullName>Saldo_parcelado__c</fullName>
    <formula>TotalPrice - IF(ISBLANK(Valor_de_entrada__c), 0, Valor_de_entrada__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo parcelado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>