force-app/main/default/objects/Quote/fields/Taxa_de_Juros_s_entrada_Financiamento__c.field-meta.xml
<CustomField>
    <fullName>Taxa_de_Juros_s_entrada_Financiamento__c</fullName>
    <formula>IF(
    ISPICKVAL(Responsabilidade_pelos_Encargos__c, &quot;Cessão de Crédito – Hospcom&quot;),
    
    IF(
        VALUE(Numero_de_prestacoes__c) = 1,
        0,
        IF(
            AND(
                TotalPrice &gt; 0,
                VALUE(Numero_de_prestacoes__c) &gt; 0,
                Juros_Base__r.Juros__c &gt; 0
            ),
            (
                (
                    (
                        TotalPrice *
                        (
                            Juros_Base__r.Juros__c /
                            (1 - EXP(-VALUE(Numero_de_prestacoes__c) * LN(1 + Juros_Base__r.Juros__c)))
                        )
                    ) * VALUE(Numero_de_prestacoes__c)
                ) - TotalPrice
            ) / TotalPrice,
            0
        )
    ),

    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxa de Juros s/ entrada (Financiamento)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>