force-app/main/default/objects/Quote/fields/Telefone_do_Contato__c.field-meta.xml
<CustomField>
    <fullName>Telefone_do_Contato__c</fullName>
    <formula>Contact.Phone + &quot;/&quot; + Contact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone do Contato</label>
    <type>Text</type>
</CustomField>