force-app/main/default/objects/Quote/fields/Tem_entrada__c.field-meta.xml
<CustomField>
    <fullName>Tem_entrada__c</fullName>
    <label>Tem entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>