force-app/main/default/objects/Quote/fields/Testemunha__c.field-meta.xml
<CustomField>
    <fullName>Testemunha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Testemunha</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.CPF__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cotações</relationshipLabel>
    <relationshipName>Cota_es</relationshipName>
    <type>Lookup</type>
</CustomField>