force-app/main/default/objects/Quote/fields/Validador2__c.field-meta.xml
<CustomField>
    <fullName>Validador2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validador 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cotações (Validador 2)</relationshipLabel>
    <relationshipName>Cota_es3</relationshipName>
    <type>Lookup</type>
</CustomField>