force-app/main/default/objects/Quote/fields/Valor_da_parcela__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_parcela__c</fullName>
    <formula>(TotalPrice -  Valor_de_entrada__c) / VALUE(LEFT(TEXT(Condicao_de_pagamento__c), FIND(&quot;x&quot;, TEXT(Condicao_de_pagamento__c)) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor da parcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>