force-app/main/default/objects/Quote/validationRules/Assinantes_iguais.validationRule-meta.xml
<ValidationRule>
    <fullName>Assinantes_iguais</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
Assinante2__c = Testemunha__c,
Assinante2__c = ContactId,
Assinante2__c = Validador__c,
Assinante2__c = Validador2__c,
Validador__c = Validador2__c,
Contact.Id =  Validador__c,
Testemunha__c = Validador__c,
Contact.Id =  Validador2__c,
Testemunha__c = Validador2__c
)</errorConditionFormula>
    <errorMessage>Existem contatos repetidos de assinantes.</errorMessage>
</ValidationRule>