force-app/main/default/objects/Quote/validationRules/Caractere_Especial_Nome.validationRule-meta.xml
<ValidationRule>
    <fullName>Caractere_Especial_Nome</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   CONTAINS(Name, &apos;/&apos;),
   Nome_da_Testemunha__c != null
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>O nome da Cotação não pode conter o caractere &quot; / &quot;.</errorMessage>
</ValidationRule>