force-app/main/default/objects/Quote/validationRules/Cliente_e_testemunha_iguais.validationRule-meta.xml
<ValidationRule>
    <fullName>Cliente_e_testemunha_iguais</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ContactId != null,
ContactId = Testemunha__c
)</errorConditionFormula>
    <errorDisplayField>Testemunha__c</errorDisplayField>
    <errorMessage>A testemunha deve ser diferente do cliente.</errorMessage>
</ValidationRule>