force-app/main/default/objects/Quote/validationRules/Condicao_especial.validationRule-meta.xml
<ValidationRule>
    <fullName>Condicao_especial</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Condicao_de_pagamento__c) = &apos;Condição Especial - Aprovado pela Diretoria&apos;,
Observa_o_da_Condi_o__c == &apos;&apos;
)</errorConditionFormula>
    <errorDisplayField>Observa_o_da_Condi_o__c</errorDisplayField>
    <errorMessage>Para condição especial, descreva a condição de pagamento.</errorMessage>
</ValidationRule>