force-app/main/default/objects/Quote/validationRules/Condicao_especial_data1.validationRule-meta.xml
<ValidationRule>
    <fullName>Condicao_especial_data1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Condicao_de_pagamento__c) = &apos;Condição Especial - Aprovado pela Diretoria&apos;,
ISNULL(Data_da_entrada__c) 
)</errorConditionFormula>
    <errorDisplayField>Data_da_entrada__c</errorDisplayField>
    <errorMessage>Para condição especial, preencha a data da entrada.</errorMessage>
</ValidationRule>