force-app/main/default/objects/Quote/validationRules/Condicao_especial_data2.validationRule-meta.xml
<ValidationRule>
    <fullName>Condicao_especial_data2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Condicao_de_pagamento__c) = &apos;Condição Especial - Aprovado pela Diretoria&apos;,
ISNULL(Data_das_demais_parcelas__c) 
)</errorConditionFormula>
    <errorDisplayField>Data_das_demais_parcelas__c</errorDisplayField>
    <errorMessage>Para condição especial, preencha a data das demais parcelas</errorMessage>
</ValidationRule>