force-app/main/default/objects/Quote/validationRules/Condicao_especial_parcelas.validationRule-meta.xml
<ValidationRule>
    <fullName>Condicao_especial_parcelas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Condicao_de_pagamento__c) = &apos;Condição Especial - Aprovado pela Diretoria&apos;,
Numero_de_prestacoes__c == &apos;&apos; 
)</errorConditionFormula>
    <errorDisplayField>Numero_de_prestacoes__c</errorDisplayField>
    <errorMessage>Para condição especial, preencha o número de prestações.</errorMessage>
</ValidationRule>