force-app/main/default/objects/Quote/validationRules/Conjuge_sem_fiador.validationRule-meta.xml
<ValidationRule>
    <fullName>Conjuge_sem_fiador</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!ISBLANK(Conjuge_do_Fiador__c),
ISBLANK(Fiador__c)
)</errorConditionFormula>
    <errorDisplayField>Fiador__c</errorDisplayField>
    <errorMessage>Não preencha cônjuge sem informar o fiador.</errorMessage>
</ValidationRule>