force-app/main/default/objects/Quote/validationRules/Fiador_sem_endereco.validationRule-meta.xml
<ValidationRule>
    <fullName>Fiador_sem_endereco</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Fiador__c != null,
OR(
Fiador__r.BillingPostalCode == null,
Fiador__r.BillingCity == null,
Fiador__r.BillingStreet == null
)
)</errorConditionFormula>
    <errorDisplayField>Fiador__c</errorDisplayField>
    <errorMessage>Os campos de endereço do fiador estão incompletos</errorMessage>
</ValidationRule>