force-app/main/default/objects/Quote/validationRules/Forma_de_pagamento_da_entrada.validationRule-meta.xml
<ValidationRule>
    <fullName>Forma_de_pagamento_da_entrada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Tem_entrada__c) == &apos;Sim&apos;,
TEXT(Forma_de_pagamento_da_entrada__c) == &apos;&apos;
)</errorConditionFormula>
    <errorDisplayField>Forma_de_pagamento__c</errorDisplayField>
    <errorMessage>Preencha a forma de pagamento da entrada.</errorMessage>
</ValidationRule>