force-app/main/default/objects/Quote/validationRules/Num_parcelas_p_nao_financiamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Num_parcelas_p_nao_financiamento</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	NOT(CONTAINS(LOWER(TEXT(Forma_de_pagamento__c)), &apos;finaciamento&apos;)),
	Numero_de_prestacoes__c != null
)</errorConditionFormula>
    <errorDisplayField>Numero_de_prestacoes__c</errorDisplayField>
    <errorMessage>O número de prestações deve ser preenchido apenas para financiamentos.</errorMessage>
</ValidationRule>