force-app/main/default/objects/Quote/validationRules/Obs_da_condicao.validationRule-meta.xml
<ValidationRule>
    <fullName>Obs_da_condicao</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
TEXT(Condicao_de_pagamento__c) != &apos;Condição Especial - Aprovado pela Diretoria&apos;,
Observa_o_da_Condi_o__c != &apos;&apos;
)</errorConditionFormula>
    <errorDisplayField>Observa_o_da_Condi_o__c</errorDisplayField>
    <errorMessage>Observação da condição deve ser preenchida apenas para Condição Especial - Aprovado pela Diretoria.</errorMessage>
</ValidationRule>