force-app/main/default/objects/Quote/validationRules/Prestacao.validationRule-meta.xml
<ValidationRule>
    <fullName>Prestacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(Numero_de_prestacoes__c),
  ISBLANK(Numero_de_prestacoes__c) = false,
  TEXT(Condicao_de_pagamento__c) != &apos;Financiamento Bancário&apos;
)</errorConditionFormula>
    <errorDisplayField>Numero_de_prestacoes__c</errorDisplayField>
    <errorMessage>O campo Nº de prestações deve ser preenchido apenas para Financiamento Bancário.</errorMessage>
</ValidationRule>