force-app/main/default/objects/Quote/validationRules/Primeira_parcela.validationRule-meta.xml
<ValidationRule>
    <fullName>Primeira_parcela</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
TEXT(Opportunity.Departamento__c) != &apos;Governo&apos;,
!ISPICKVAL(Condicao_de_pagamento__c, &apos;À Vista - Antecipado&apos;),
!ISPICKVAL(Condicao_de_pagamento__c, &apos;À vista - Paga e Retira&apos;),
ISNULL(Data_da_entrada__c)
)</errorConditionFormula>
    <errorDisplayField>Data_da_entrada__c</errorDisplayField>
    <errorMessage>Preencha a data da entrada / 1ª parcela</errorMessage>
</ValidationRule>