force-app/main/default/objects/Quote/validationRules/Valor_de_entrada.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor_de_entrada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 TEXT(Valor_de_entrada__c) == &apos;&apos;,
OR(
CONTAINS(TEXT(Condicao_de_pagamento__c) , &apos;Entrada&apos;),  CONTAINS(TEXT(Condicao_de_pagamento__c) , &apos;Entrada&apos;), 
TEXT(Tem_entrada__c) == &apos;Sim&apos;
)
)</errorConditionFormula>
    <errorDisplayField>Valor_de_entrada__c</errorDisplayField>
    <errorMessage>Preencha o valor de entrada</errorMessage>
</ValidationRule>