force-app/main/default/objects/Quote/listViews/Contratos.listView-meta.xml
<ListView>
    <fullName>Contratos</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>StatusAssinatura__c</columns>
    <columns>Data_da_fase__c</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fase__c</field>
        <operation>notEqual</operation>
        <value>,null,Cancelado,Expirado,Recusado</value>
    </filters>
    <label>Contratos em assinatura</label>
</ListView>