force-app/main/default/objects/Quote/listViews/Contratos_assinados.listView-meta.xml
<ListView>
    <fullName>Contratos_assinados</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Data_da_fase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fase__c</field>
        <operation>equals</operation>
        <value>null</value>
    </filters>
    <label>Contratos assinados</label>
</ListView>