force-app/main/default/objects/Quote/listViews/Contratos_expirados.listView-meta.xml
<ListView>
    <fullName>Contratos_expirados</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Data_da_fase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fase__c</field>
        <operation>equals</operation>
        <value>Expirado</value>
    </filters>
    <label>Contratos expirados</label>
</ListView>