force-app/main/default/objects/Quote/listViews/Contratos_recusados.listView-meta.xml
<ListView>
    <fullName>Contratos_recusados</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>Data_da_fase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fase__c</field>
        <operation>equals</operation>
        <value>Recusado</value>
    </filters>
    <label>Contratos recusados</label>
</ListView>