force-app/main/default/objects/Quote/listViews/Todos_os_contratos.listView-meta.xml
<ListView>
    <fullName>Todos_os_contratos</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>StatusAssinatura__c</columns>
    <columns>Data_da_fase__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os contratos</label>
</ListView>